--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <ul id="global_menu_items">
             <div>
                 <i class="fa fa-close" id="global_menu_close_button"></i>
-                <li><a href="index.html"><i class="fa fa-home"></i> ABOUT</a></li>
-                <li><a href="resume.html"><i class="fas fa-file-alt"></i> RESUME</a></li>
-                <li><a href="blogs.html"><i class="fas fa-pen-nib"></i> MY WORK</a></li>
-                <li><a href="services.html"><i class="fas fa-cog"></i> SERVICES</a></li>
-                <li><a href="contact.html"><i class="fas fa-phone-square"></i> CONTACT</a></li>
+                <li><a href="/"><i class="fa fa-home"></i> About</a></li>
+                <li><a href="resume.html"><i class="fas fa-file-alt"></i> Resume</a></li>
+                <li><a href="blogs.html"><i class="fas fa-pen-nib"></i> Blogs</a></li>
+                <li><a href="services.html"><i class="fas fa-cog"></i> Services</a></li>
+                <li><a href="contact.html"><i class="fas fa-phone-square"></i> Contact</a></li>
             </div>
         </ul>
 
@@ -49,7 +49,7 @@
         <div class="sidebar_container">
             <!-- Sidebar Image -->
             <div class="image">
-                <img src="img/profile.jpg" alt="Dipesh Thapa">
+                <img src="img/profile.jpg" alt="John Roe">
                 <div class="right_image_box"></div>
                 <div class="left_image_box"></div>
             </div>
@@ -62,6 +62,7 @@
                 <!-- Social Medias -->
                 <div class="social_media">
                     <a href="https://www.facebook.com/profile.php?id=100075327166605"><i class="fab fa-facebook"></i></a>
+                    <a href="https://github.com/alivecoder0"><i class="fab fa-github"></i></a>
                     <a href="https://www.instagram.com/dipesh.thapa.02/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -73,11 +74,11 @@
 
             <!-- Sidebar Navigation -->
             <ul class="sidebar_navigation" id="sidebar_navigation">
-                <li><a href="index.html">ABOUT</a></li>
-                <li><a href="resume.html">RESUME</a></li>
-                <li><a href="blogs.html">MY WORK</a></li>
-                <li><a href="services.html">SERVICES</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="/" class="active">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="blogs.html">Blogs</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
 
             </ul>
 
@@ -89,15 +90,15 @@
                 <h2 class="title">About <span>Me</span></h2>
                 <hr class="line">
                 <div class="about_content">
-                    <p class="about_text">Hello! I'm Dipesh Thapa, a passionate graphic designer with a keen eye for
-                        creativity and a drive for excellence in design. With a strong foundation in visual communication
-                        and a deep understanding of design principles, I specialize in crafting captivating visuals that
-                        leave a lasting impression.
-                        My journey as a graphic designer has been both rewarding and exhilarating. I thrive on transforming ideas into visually stunning realities, whether it's through branding, illustration, typography, or digital design.</p>
+                    <p class="about_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi numquam,
+                        porro dolore aut, explicabo eius voluptates vitae fuga, minus quaerat dolor. Autem id iure at
+                        illum in cumque, quasi esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. In
+                        quaerat error tempora incidunt rem voluptas accusamus perspiciatis itaque exercitationem
+                        voluptatem?</p>
                 </div>
                 <div class="about_profile">
                     <ul class="left_profile">
-                        <li><span class="profile_title">Date of Birth</span><span>September 29, 2004</span></li>
+                        <li><span class="profile_title">Date of Birth</span><span>July 3, 2000</span></li>
                         <li><span class="profile_title">Gender</span><span>Male</span></li>
                         <li><span class="profile_title">Age</span><span>20 Years Old</span></li>
                         <li><span class="profile_title">Maritial Status</span><span>Unmarried</span></li>
@@ -106,11 +107,11 @@
                     </ul>
 
                     <ul class="right_profile">
-                        <li><span class="profile_title">Profession</span><span>Graphics Designer</span></li>
-                        <li><span class="profile_title">Address</span><span>Anamnagar, Kathmandu, Nepal</span></li>
-                        <li><span class="profile_title">Contact</span><span>+977 9842747296</span></li>
-                        <li><span class="profile_title">Email</span><span>thapadip212@gmail.com</span></li>
-                        <li><span class="profile_title">Business</span><span>Fusion Arts</span></li>
+                        <li><span class="profile_title">Profession</span><span>Web Designer</span></li>
+                        <li><span class="profile_title">Address</span><span>Jhapa, Nepal</span></li>
+                        <li><span class="profile_title">Contact</span><span>+977 9800000000</span></li>
+                        <li><span class="profile_title">Email</span><span>email@gmail.com</span></li>
+                        <li><span class="profile_title">Website</span><span>mywebsite.com</span></li>
                         <li><span class="profile_title">Freelance</span><span>Available</span></li>
                     </ul>
                 </div>
